packages/rspack-test-tools/tests/configCases/errors/hide-stack/errors.js
module.exports = [
  [/push message hide/, { details: /push stack hide/ }],
  [/push stack/],
  [/emit message hide/, { details: /emit stack hide/ }],
  [/emit stack/],
  [/throw message hide/, { details: /throw stack hide/ }],
  [/throw stack/],
]
